# vcprompt2

./: .gitignore  .gitmodules  .mergify.yml  .travis.yml  CMakeLists.txt  README.md
include/: BaseVCS.h  VcsTypes.h  dirUtil.h  error.h  git.h  mercurial.h  subversion.h
source/: CMakeLists.txt  error.cpp  git.cpp  main.cpp
unit-tests/: CMakeLists.txt
unit-tests/git_tests/: CMakeLists.txt  interface_test.cpp
unit-tests/mocks/: git2.c  mockgit2.h
unit-tests/util_tests/: CMakeLists.txt  util_test.cpp
