cmake_minimum_required (VERSION 2.6)
project (vcprompt2)

include(CTest)
include(CheckCXXCompilerFlag)
CHECK_CXX_COMPILER_FLAG("-std=c++11" COMPILER_SUPPORTS_CXX11)
CHECK_CXX_COMPILER_FLAG("-std=c++0x" COMPILER_SUPPORTS_CXX0X)
if(COMPILER_SUPPORTS_CXX11)
  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
elseif(COMPILER_SUPPORTS_CXX0X)
  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")
else()
  message(STATUS "The compiler ${CMAKE_CXX_COMPILER} has no C++11 support. Please use a different C++ compiler.")
endif()

include_directories("${CMAKE_SOURCE_DIR}/include")

set(SOURCE "")
add_subdirectory(3rdParty)
add_subdirectory(source)
add_subdirectory(unit-tests)

link_directories("${CMAKE_BINARY_DIR}/3rdParty/libgit2")
add_executable(vcprompt2 ${SOURCE})
target_link_libraries (vcprompt2 git2)
